--- a/index.css
+++ b/index.css
@@ -144,6 +144,7 @@ object{
   .accordion {
     width: 95%;
     transform: skewX(0deg);
+    flex-direction: column;
     
   } 
   object{
@@ -168,30 +169,85 @@ object{
 
 @media screen and (max-width: 1000px) {
   .accordion {
-    transform: skewX(0deg);
     width: 100%;
-  } 
+    height: 100%;
+    transform: skewX(0deg);
+    border: 0px;
+    padding-top: 0px;
+}
+
   object{
-    transform: skewX(0deg);
-    width: 90%;
-  }
-  .titlecard{
-    transform: skewX(0deg);
-  }
-  .accordion-select {
-    margin-right: -10%;
+      transform: skewX(0deg);
   }
 
+.accordion-title:not(:nth-last-child(2))::after {
+    border: 0px solid transparent;
+    bottom: 0;
+    content: '';
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
 
-  .accordion-content {
-    margin-right: -60%; 
+.accordion-title span {
+    bottom: 0px;
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    white-space: nowrap;
     width: 100%;
-  }
+}
 
-  .accordion-title,
-  .accordion-select  {
-    width: 15%;
-    
-  }
+.accordion-content {
+    box-sizing: border-box;
+    overflow: auto;
+    position: relative;
+    transition: margin 0.3s ease 0.1s;
+}
 
+.accordion-select:checked + .accordion-title + .accordion-content {
+    margin-bottom: 0;
+    margin-right: 0;
+}
+
+/* Generated styles starts here */
+
+.accordion {
+    border-style: solid;
+    flex-direction: column;
+    height: 100%;
+} 
+
+.accordion-title h2 {
+  text-align: center;
+  transform: skewX(0deg);
+  bottom: -50%;
+  font-size: 3em;
+  
+}
+
+.accordion-title,
+.accordion-select  {
+    width: 100%;
+    height: 10%;
+    font-size: 1.25em;
+    border-bottom: 2px solid; 
+    border-top: 2px solid;
+    border-left: 0px; 
+    border-right: 0px;
+}
+
+.accordion-select {
+    margin-bottom: -10%;
+    margin-top: 0%;
+}
+
+.accordion-content {
+    height: 100%;
+    margin-bottom: -120%;
+    margin-right: 0;
+    width: 100%;
+    transform: skewX(0deg);
+}
 }
