Getting colors right

--- a/media/media.css
+++ b/media/media.css
@@ -5,6 +5,12 @@ body{
 
     margin: auto;
     margin-top: 3%;
+
+    background-color: black;
+}
+
+a{
+    color: white;
 }
 
 body::-webkit-scrollbar {
