--- a/media/media.css
+++ b/media/media.css
@@ -9,6 +9,15 @@ body{
     background-color: black;
 }
 
+p{
+    margin: 25px;
+    width: 75%;
+    border: 5px solid white;
+    border-radius: 5px;
+    padding: 50px;
+    
+}
+
 a{
     color: white;
 }
