JRose: Minor text formatting

--- a/other/JonsRose/JRIndex.css
+++ b/other/JonsRose/JRIndex.css
@@ -25,9 +25,19 @@ body{
 }
 
 .petalText{
-    padding-top: 50%;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-left: 75px;
+  margin-right: 100px;
 }
 
+.petalCount{
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  margin-left: 25px;
+}
 
 @keyframes fadeInOut {
     0% {
